--- a/template/modifyproject.html
+++ b/template/modifyproject.html
@@ -1,53 +1,29 @@
-﻿<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<div class="container" ng-controller="modifyProjectController">
+    <fieldset class="form-group">
+        <legend style="margin:0 10px 0 10px; width:200px;">MODIFY PROJECT</legend>
 
-<style type="text/css">
-    #divbottom {
-        width: 1000px;
-        margin: 20px auto;
-    }
-</style>
+        <div class="row" style="text-align:center">
 
+          <div class="col-sm-12" style="padding:50px 0 100px 0;">
+            <select class="dropdown form-control" style="width: 50%; margin:0 auto">
+              <option value="0" selected="selected">--Please Select--</option>
+              <option value="1">Project Name</option>
+              <option value="2">test2</option>
+              <option value="3">test3</option>
+            </select>
+          </div>
 
+          <div class="row">
+            <div class="col-sm-6" style="text-align:right;">
+                <!--กด update จะไปหน้า modifymember_update-->
+                <button type="button" class="btn btn-info" ng-click="updateProjectSubmit()">Update</button>
+            </div>
+            <div class="col-sm-6" style="text-align:left;">
+              <!--พอกด delete จะมีpop-upขึ้นมาถามก่อนลบ-->
+              <button type="button" class="btn btn-danger" ng-click="submit()">Delete</button>
+            </div>
+          </div>
 
-
-
-<div class="container">
-    <fieldset style="height: 200px; width: 480px; margin-left: 50px; margin-top: 10px; border-style:solid; margin-right:20px;">
-        <legend>MODIFY PROJECT</legend>
-
-            
-        <div class="dropdown">
-            <button class="btn  dropdown-toggle" type="button" data-toggle="dropdown">
-                -- Select Project --
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="#">ชื่อโปรเจค1</a></li>
-                <li><a href="#">ชื่อโปรเจค2</a></li>
-                <li><a href="#">ชื่อโปรเจค3</a></li>
-            </ul>
-
-        </div>
-          
-                <div id="divbottom">
-                    <!--กด update จะไปหน้า modifyproject_update-->
-                    <input type="button" class="btn" value="Update" style="margin-right:80px; margin-top:150px;">
-                    <!--พอกด delete จะมีpop-upขึ้นมาถามก่อนลบ-->
-                    <input type="button" class="btn" value="Delete" style="margin-top:150px;"> 
-
-                </div>
-            
-        
-        
-
-
-
-        
     </fieldset>
 
-
 </div>
-</body>
-</html>
