edit style success

--- a/template/export.html
+++ b/template/export.html
@@ -1,19 +1,15 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
 <div class="container">
-  
-    <fieldset>
-        <legend>EXPORT FILE</legend>
 
-        <center>
-            <div>
-                <!-- export excel file -->
-                <button type="button" class="btn">EXPORT</button>
+    <fieldset class="form-group" style="height:300px">
+
+        <legend style="width:150px">EXPORT FILE</legend>
+            <div class="col-sm-12" style="text-align:center;margin-top:20px">
+              <h3>Export day off report file</h3>
             </div>
-        </center>
+            <div class="col-sm-12" style="text-align:center;margin-top:40px">
+                <!-- export excel file -->
+                <button type="button" class="btn-lg btn-warning">EXPORT</button>
+            </div>
 
     </fieldset>
 
